Upgrade to openrewrite 21
See: #11